--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.46.1",
