Create alias for root folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,9 @@
     ],
     "target": "es2022",
     "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   }
 }
