--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "electron/electron.js",
   "scripts": {
     "electron": "wait-on tcp:8000 && cross-env IS_DEV=true electron .",
-    "electron:builder": "electron-builder",
+    "electron:builder": "electron-builder --config electron-builder.conf.js",
     "dev": "concurrently -k 'cross-env BROWSER=none vite' 'npm run electron'",
     "build": "vue-tsc --noEmit && cross-env ELECTRON=true vite build && npm run electron:builder",
     "build-all": "npm run build -- -- --linux deb --win nsis --mac zip",
@@ -56,25 +56,5 @@
     "wait-on": "^6.0.1",
     "wdio-chromedriver-service": "^8.0.1",
     "wdio-electron-service": "^3.5.0"
-  },
-  "build": {
-    "appId": "fr.inria.epoc-editor",
-    "productName": "ePoc Editor",
-    "copyright": "Copyright © 2022 ${author}",
-    "mac": {
-      "category": "public.app-category.utilities"
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
-    },
-    "files": [
-      "dist/**/*",
-      "electron/**/*"
-    ],
-    "directories": {
-      "buildResources": "assets",
-      "output": "dist_electron"
-    }
   }
 }
