--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.6.0",
+    "@vueup/vue-quill": "^1.0.1",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "vue": "^3.2.45",
