--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.6.0",
     "@vueup/vue-quill": "^1.0.1",
+    "adm-zip": "^0.5.10",
+    "glob": "^8.1.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "vue": "^3.2.45",
