--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue-flow/core": "^1.6.0",
     "@vueup/vue-quill": "^1.0.1",
     "adm-zip": "^0.5.10",
+    "electron-store": "^8.1.0",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
@@ -45,7 +46,7 @@
     "chromedriver": "^108.0.0",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "electron": "^22.0.0",
+    "electron": "^22.3.0",
     "electron-builder": "^23.6.0",
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
