--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "vitest",
     "coverage": "vitest --coverage",
     "wdio": "wdio run ./wdio.conf.ts",
-    "lint": "npx eslint ./src ./test ./electron/* --ext .ts,.vue,.js"
+    "lint": "npx eslint ./src ./test ./electron/* --ext .ts,.vue,.js",
+    "updatePreview": "export $(grep -v '^#' .env | xargs) && curl --location --output public/preview.zip --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" $GITLAB_URL"
   },
   "dependencies": {
     "@vue-flow/additional-components": "^1.3.3",
