--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@vueup/vue-quill": "^1.0.1",
     "adm-zip": "^0.5.10",
     "electron-store": "^8.1.0",
+    "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
