Issue #125 : Fix preview in prod

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "coverage": "vitest --coverage",
     "wdio": "wdio run ./wdio.conf.ts",
     "lint": "npx eslint ./src ./test ./electron/* --ext .ts,.vue,.js",
-    "updatePreview": "export $(grep -v '^#' .env | xargs) && curl --location --output public/preview.zip --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" $GITLAB_URL"
+    "updatePreview": "export $(grep -v '^#' .env | xargs) && curl --location --output public/preview.zip --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" $GITLAB_URL",
+    "debug-mac": "'./dist_electron/mac-arm64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
   },
   "dependencies": {
     "@vue-flow/additional-components": "^1.3.3",
