--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug-mac": "'./dist_electron/mac-arm64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.14.3",
     "@vueup/vue-quill": "^1.0.1",
@@ -37,6 +38,7 @@
     "serve-static": "^1.15.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-tippy": "^6.0.0",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
