--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epoc-editor-v2",
+  "name": "epoc-editor",
   "homepage": "https://epoc.inria.fr",
   "license": "CeCILL-B",
   "author": {
