--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.31.2",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -59,6 +60,7 @@
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
     "happy-dom": "^8.1.0",
+    "playwright": "^1.31.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
