--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,32 +2,39 @@ stages:
 - build
 - release
 
-build:
-  image: node:16
-  stage: build
-  script:
+before_script:
   - dpkg --add-architecture i386
   - apt-get update -qy
   - apt-get -y install curl wine32
   - npm i
   - npm run updatePreview
-  - npm run build-all
+  - npm run build-all 
+
+build:
+  image: node:16
+  stage: build
+  script:
+    - echo "Build Done"
   artifacts:
     expire_in: 1 yr
     paths:
     - dist_electron/*.zip
     - dist_electron/*.deb
     - dist_electron/*.exe
-  only:
-  - main
-  - web
-  - tags
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG == null'
+
 
 release:
+  image: node:16
   stage: release
-  needs: 
-    - build
   script:
-    - ls
-  only:
-  - tags
+    - echo "Release Done"
+  artifacts:
+    expire_in: 1 yr
+    paths:
+    - dist_electron/*.zip
+    - dist_electron/*.deb
+    - dist_electron/*.exe
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG != null'
