--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "icon": "favicon.png",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0-beta",
   "main": "electron/electron.js",
   "scripts": {
     "electron": "wait-on tcp:8000 && cross-env IS_DEV=true electron .",
