--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,40 +1,25 @@
 stages:
 - build
-- release
 
 before_script:
   - dpkg --add-architecture i386
   - apt-get update -qy
   - apt-get -y install curl wine32
   - npm i
-  - npm run updatePreview
-  - npm run build-all 
 
 build:
   image: node:16
   stage: build
   script:
-    - echo "Build Done"
+    - npm run updatePreview
+    - npm run build-all 
   artifacts:
     expire_in: 1 yr
     paths:
     - dist_electron/*.zip
     - dist_electron/*.deb
     - dist_electron/*.exe
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG == null'
-
-
-release:
-  image: node:16
-  stage: release
-  script:
-    - echo "Release Done"
-  artifacts:
-    expire_in: 1 yr
-    paths:
-    - dist_electron/*.zip
-    - dist_electron/*.deb
-    - dist_electron/*.exe
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG != null'
+  only:
+    - main
+    - web
+    - tags
