--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,7 @@ build:
       - dist_electron/*.exe
   
   rules:
-    - if: $RELEASE_NAME == null
-    - if: '$CI_COMMIT_REF_NAME == "main" || $CI_COMMIT_TAG'
+    - if: $RELEASE_NAME == null && ('$CI_COMMIT_REF_NAME == "main" || $CI_COMMIT_TAG')
 
 release:
   stage: release
