--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,8 +46,8 @@ autorelease:
     - git remote add origin https://oauth2:${PERSONAL_ACCESS_TOKEN}@gitlab.inria.fr/learninglab/epoc/epoc-editor.git
     - git config --global user.name "${GITLAB_USER_NAME}"
     - git config --global user.email "${GITLAB_USER_EMAIL}"
-    - npm version "$RELEASE_NAME-beta"
-    - git add package.json
+    - npm version "$RELEASE_NAME-beta" --allow-same-version=true --git-tag-version=false
+    - git add package.json package-lock.json
     - git commit -m "Bump version"
     - git tag v$RELEASE_NAME
     - git push origin --tags
