--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "quill-image-uploader": "^1.2.4",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
-    "vue": "^3.2.45",
+    "vue": "3.3",
     "vue-router": "^4.1.6",
     "vue-tippy": "^6.0.0",
     "vuedraggable": "^4.1.0"
