--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
+    "quill-html-edit-button": "^2.2.12",
     "quill-image-uploader": "^1.2.4",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
