--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@epoc/epoc-types": "^2.0.0-beta.3",
     "@meforma/vue-toaster": "^1.3.0",
+    "@tinymce/tinymce-vue": "^5.1.0",
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.16.4",
     "@vueup/vue-quill": "^1.0.1",
@@ -38,6 +39,7 @@
     "quill-image-uploader": "^1.2.4",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
+    "tinymce": "^6.4.2",
     "vue": "3.3",
     "vue-router": "^4.1.6",
     "vue-tippy": "^6.0.0",
