--- a/package.json
+++ b/package.json
@@ -26,16 +26,14 @@
   "dependencies": {
     "@epoc/epoc-types": "^2.0.0-beta.3",
     "@meforma/vue-toaster": "^1.3.0",
+    "@tinymce/tinymce-vue": "^5.1.0",
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.16.4",
-    "@vueup/vue-quill": "^1.0.1",
     "adm-zip": "^0.5.10",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
-    "quill-html-edit-button": "^2.2.12",
-    "quill-image-uploader": "^1.2.4",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
     "vue": "3.3",
