--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "icon": "favicon.png",
   "private": true,
   "version": "0.1.2-beta",
-  "main": "electron/electron.js",
+  "main": ".vite/build/electron.js",
   "scripts": {
     "electron": "wait-on tcp:8000 && cross-env IS_DEV=true electron .",
     "electron:builder": "electron-builder --config electron-builder.conf.js",
@@ -21,7 +21,13 @@
     "wdio": "wdio run ./wdio.conf.ts",
     "lint": "npx eslint ./src ./test ./electron/* --ext .ts,.vue,.js",
     "updatePreview": "export $(grep -v '^#' .env | xargs) && curl --location --output public/preview.zip --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" $GITLAB_URL",
-    "debug-mac": "'./dist_electron/mac-arm64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
+    "debug-mac": "'./dist_electron/mac-arm64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315",
+    "debug-mac2": "'./out/ePoc Editor-darwin-x64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "make all": "electron-forge package --platform=all && electron-forge make --platform=darwin --skip-package && electron-forge make --platform=win32 --skip-package && electron-forge make --platform=linux --skip-package",
+    "publish": "electron-forge publish"
   },
   "dependencies": {
     "@epoc/epoc-types": "^2.0.0-beta.7",
@@ -30,18 +36,30 @@
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.16.4",
     "adm-zip": "^0.5.10",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
+    "update-electron-app": "^2.0.1",
     "vue": "3.3",
     "vue-router": "^4.1.6",
     "vue-tippy": "^6.0.0",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
+    "@electron-forge/plugin-vite": "^6.1.1",
+    "@electron-forge/publisher-github": "^6.2.1",
+    "@electron/notarize": "^1.2.4",
+    "@electron/osx-sign": "^1.0.4",
+    "@rollup/plugin-commonjs": "^25.0.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -53,6 +71,7 @@
     "chromedriver": "^108.0.0",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "electron": "^22.3.0",
     "electron-builder": "^23.6.0",
     "eslint": "^8.29.0",
