--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.16.4",
     "adm-zip": "^0.5.10",
+    "dotenv": "^16.3.1",
+    "electron-notarize": "^1.2.2",
     "electron-store": "^8.1.0",
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
     "sass": "^1.56.2",
     "serve-static": "^1.15.0",
+    "update-electron-app": "^2.0.1",
     "vue": "3.3",
     "vue-router": "^4.1.6",
     "vue-tippy": "^6.0.0",
