--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "epoc-editor",
   "homepage": "https://epoc.inria.fr",
+  "description": "Desktop app to design, build, and publish your own ePoc mobile learning courses.",
   "license": "CeCILL-B",
   "author": {
     "name": "Inria Learning Lab",
@@ -8,14 +9,14 @@
   },
   "icon": "favicon.png",
   "private": true,
-  "version": "0.1.2-beta",
+  "version": "0.1.4-beta",
   "main": "electron/electron.js",
   "scripts": {
     "electron": "wait-on tcp:8000 && cross-env IS_DEV=true electron .",
     "electron:builder": "electron-builder --config electron-builder.conf.js",
     "dev": "concurrently -k 'cross-env BROWSER=none vite' 'npm run electron'",
     "build": "vue-tsc --noEmit && cross-env ELECTRON=true vite build && npm run electron:builder",
-    "build-all": "npm run build -- -- --linux deb --win nsis --mac zip",
+    "build-all": "npm run build -- -- --x64 --linux deb --win nsis --mac zip",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "wdio": "wdio run ./wdio.conf.ts",
