--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "wdio": "wdio run ./wdio.conf.ts",
     "lint": "npx eslint ./src ./test ./electron/* --ext .ts,.vue,.js",
     "updatePreview": "export $(grep -v '^#' .env | xargs) && curl --location --output public/preview.zip --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" $GITLAB_URL",
-    "debug-mac": "'./dist_electron/mac-arm64/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
+    "debug-mac": "'/Applications/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
   },
   "dependencies": {
     "@epoc/epoc-types": "^2.0.0-beta.7",
