Issue #128 : electron builder auto update works !!

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "electron:builder": "electron-builder --config electron-builder.conf.js",
     "dev": "concurrently -k 'cross-env BROWSER=none vite' 'npm run electron'",
     "build": "vue-tsc --noEmit && cross-env ELECTRON=true vite build && npm run electron:builder",
-    "build-all": "npm run build -- -- --x64 --linux deb --win nsis --mac zip",
+    "build-all": "npm run build -- -- --x64 -mwl",
+    "release": "npm run build -- -- --x64 --mac --win nsis --linux AppImage --publish always",
     "test": "vitest",
     "coverage": "vitest --coverage",
     "wdio": "wdio run ./wdio.conf.ts",
@@ -34,6 +35,7 @@
     "dotenv": "^16.3.1",
     "electron-notarize": "^1.2.2",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.1.1",
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "pinia": "^2.0.28",
