Issue #128 : disable publishing on CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build:
   script:
     - npm i
     - npm run updatePreview
-    - npm run build
+    - npm run build -- -- --publish never
   artifacts:
     expire_in: 1 week
     paths:
