--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@meforma/vue-toaster": "^1.3.0",
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vue-flow/additional-components": "^1.3.3",
-    "@vue-flow/core": "~1.16.4",
+    "@vue-flow/core": "1.16.4",
     "adm-zip": "^0.5.10",
     "dotenv": "^16.3.1",
     "electron-notarize": "^1.2.2",
