--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "debug-mac": "'/Applications/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
   },
   "dependencies": {
-    "@epoc/epoc-types": "^2.0.0-beta.7",
+    "@epoc/epoc-types": "git+https://gitlab.inria.fr/learninglab/epoc/epoc-types.git",
     "@meforma/vue-toaster": "^1.3.0",
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vue-flow/additional-components": "^1.3.3",
