feat(test): Test fill forms

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,10 @@
         "@typescript-eslint/ban-ts-comment": "off",
         "indent": [
             "warn",
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "vue/html-indent": [
             "warn",
