--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@vue-flow/core": "1.16.4",
     "adm-zip": "^0.5.10",
     "dotenv": "^16.3.1",
-    "electron-notarize": "^1.2.2",
+    "@electron/notarize": "^1.2.2",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
