--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "debug-mac": "'/Applications/ePoc Editor.app/Contents/MacOS/ePoc Editor' --remote-debugging-port=8315"
   },
   "dependencies": {
+    "@electron/notarize": "^1.2.2",
     "@epoc/epoc-types": "^2.0.0-beta.10",
     "@meforma/vue-toaster": "^1.3.0",
     "@tinymce/tinymce-vue": "^5.1.0",
-    "@vue-flow/core": "1.16.4",
+    "@vue-flow/core": "^1.41.2",
     "adm-zip": "^0.5.10",
     "dotenv": "^16.3.1",
-    "@electron/notarize": "^1.2.2",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.1",
     "express": "^4.18.2",
