--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@meforma/vue-toaster": "^1.3.0",
     "@tinymce/tinymce-vue": "^5.1.0",
     "@vue-flow/core": "^1.41.2",
+    "@vueuse/core": "^11.1.0",
     "adm-zip": "^0.5.10",
     "dotenv": "^16.3.1",
     "electron-store": "^8.1.0",
