--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 stages:
   - build
+  - buildAll
+  - sign
+
 build:
   image: node:16
   stage: build
@@ -11,4 +14,30 @@ build:
     expire_in: 1 week
     paths:
       - dist_electron/*
+  only:
+    - main
+
+buildAll:
+  image: node:16
+  stage: build
+  script:
+    - npm i
+    - npm run updatePreview
+    - npm run build -- -- --x64 --mac --win nsis --linux AppImage --publish never
+  artifacts:
+    expire_in: never
+    paths:
+      - dist_electron/*
+  only:
+    - tags
+
+sign:
+  stage: sign
+  script:
+    - echo "Triggering signing pipeline..."
+    - curl -X POST -F token=$SIGN_REPO_TRIGGER_TOKEN -F ref=main $SIGN_REPO_URL
+  dependencies:
+    - buildAll
+  only:
+    - tags
 
