--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ buildAll:
   image: node:16
   stage: build
   script:
-    - npm i
+    - npm i --package-lock-only
     - npm run updatePreview
     - npm run build -- -- --x64 --mac --win nsis --linux AppImage --publish never
   artifacts:
