--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,8 @@ buildAll:
   stage: build
   script:
     - npm i
-    - npm i -D dmg-license -f
     - npm run updatePreview
-    - npm run build -- -- --x64 --mac --win nsis --linux AppImage --publish never
+    - npm run build -- -- --x64 --mac pkg --win nsis --linux AppImage --publish never
   artifacts:
     expire_in: never
     paths:
