--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 build:
   stage: build
   script:
-    - pwd && node --version
+    - pwd && node --version && touch .env
     - npm i
     - npm run updatePreview
     - npm run build -- -- --publish never
@@ -22,7 +22,7 @@ build:
 buildAll:
   stage: build
   script:
-    - pwd && node --version
+    - pwd && node --version && touch .env
     - npm i
     - npm run updatePreview
     - npm run build -- -- --x64 --mac --win nsis --linux AppImage --publish never
