--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "dotenv": "^16.3.1",
         "electron-store": "^8.1.0",
         "electron-updater": "^6.1.1",
+        "expect": "^29.7.0",
         "express": "^4.18.2",
         "glob": "^8.1.0",
         "pinia": "^2.0.28",
@@ -54,8 +55,8 @@
         "@typescript-eslint/parser": "^5.46.1",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/test-utils": "^2.2.6",
-        "@wdio/cli": "^9.6.1",
-        "@wdio/local-runner": "^9.6.1",
+        "@wdio/cli": "8.0.13",
+        "@wdio/local-runner": "8.0.13",
         "@wdio/mocha-framework": "^8.0.13",
         "@wdio/spec-reporter": "^8.0.13",
         "chromedriver": "^132.0.1",
