--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "serve-static": "^1.15.0",
         "update-electron-app": "^2.0.1",
         "vue": "3.3",
+        "vue-i18n": "^10.0.6",
         "vue-router": "^4.1.6",
         "vue-tippy": "^6.0.0",
         "vuedraggable": "^4.1.0"
