--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "expect": "^29.7.0",
         "express": "^4.18.2",
         "glob": "^8.1.0",
+        "i18next": "^24.2.3",
+        "i18next-node-fs-backend": "^2.1.3",
         "pinia": "^2.0.28",
         "sass": "^1.56.2",
         "serve-static": "^1.15.0",
@@ -69,7 +71,7 @@
         "eslint-plugin-vue": "^9.8.0",
         "happy-dom": "^16.7.2",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.4",
+        "typescript": "^5.8.2",
         "vite": "^4.0.0",
         "vitest": "^0.25.8",
         "vue-tsc": "^1.0.11",
