--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "epoc-editor",
+    "type": "module",
     "homepage": "https://epoc.inria.fr",
     "description": "Desktop app to design, build, and publish your own ePoc mobile learning courses.",
     "license": "CeCILL-B",
@@ -35,7 +36,7 @@
         "adm-zip": "^0.5.10",
         "dotenv": "^16.3.1",
         "electron-store": "^8.1.0",
-        "electron-updater": "^6.1.1",
+        "electron-updater": "^6.6.2",
         "expect": "^29.7.0",
         "express": "^4.18.2",
         "glob": "^8.1.0",
@@ -65,7 +66,7 @@
         "chromedriver": "^132.0.1",
         "concurrently": "^7.6.0",
         "cross-env": "^7.0.3",
-        "electron": "^22.3.23",
+        "electron": "^36.2.1",
         "electron-builder": "^25.1.8",
         "eslint": "^8.29.0",
         "eslint-plugin-vue": "^9.8.0",
