--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ build:
   script:
     # Install dependencies
     - npm install
+    # Create env file
+    - env | grep -v '^_' > .env
     # Update preview and build (without publishing)
     - npm run updatePreview
     - npm run build -- --publish never
@@ -35,7 +37,6 @@ release:
   script:
     # Install dependencies
     - npm install
-
     # Create env file
     - env | grep -v '^_' > .env
     # Update preview and release
