--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ build:
     - npm run build -- -- --publish never
   artifacts:
     paths:
-      - epoc-editor/dist/
-      - epoc-editor/dist_electron/
+      - dist/
+      - dist_electron/
     expire_in: 1 week
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG == null'
@@ -45,8 +45,8 @@ release:
     - npm run release
   artifacts:
     paths:
-      - epoc-editor/dist/
-      - epoc-editor/dist_electron/
+      - dist/
+      - dist_electron/
     expire_in: 1 week
   rules:
     - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
