--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ build:
   tags:
     - macos
   before_script:
+    - id -u && pwd && which node && which npm
+    - \. "$HOME/.nvm/nvm.sh"
     - chmod +x ./ci/setup_codesign.sh
     - ./ci/setup_codesign.sh
   script:
