--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
   before_script:
     # Load nvm and unlock keychain
     - \. "$HOME/.nvm/nvm.sh"
-    - security unlock-keychain -p "ci" "login.keychain"
+    - security unlock-keychain -p "ci" "/Users/ci/Library/Keychains/login.keychain"
   script:
     # Install dependencies
     - npm install
@@ -36,7 +36,7 @@ release:
   before_script:
     # Load nvm and unlock keychain
     - \. "$HOME/.nvm/nvm.sh"
-    - security unlock-keychain -p "ci" "login.keychain"
+    - security unlock-keychain -p "ci" "/Users/ci/Library/Keychains/login.keychain"
   script:
     # Install dependencies
     - npm install
