--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,8 +48,7 @@ release:
       - dist/
       - dist_electron/
     expire_in: 1 week
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
+  when: manual
 
 # Job 3: Trigger signing pipeline in another repository
 trigger_signing:
@@ -61,6 +60,4 @@ trigger_signing:
     - release
   tags:
     - macos
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
 
